# cello

./: CMakeLists.txt  INSTALL  README
CMakeModules/: FindThrift.cmake
conf/: cellet.conf  collector.conf  framework.xml  hadoop.xml  mapred-site.xml  master  policy.xml  scheduler.conf
patch/: lxc-0.7.5.patch  lxc.patch
src/: CMakeLists.txt
src/api/: BinosTest.java  Client.java  build.xml
src/api/java/: BinosTest.java  Client.java  Hadoop.java  build.xml
src/api/java/src/: Cello.java  ClientProtocol.java  Proxy.java
src/api/src/: CelloClient.java
src/cellet/: CMakeLists.txt  cellet.cpp  cellet.h  cellet_service.cpp  cellet_service.h  config.cpp  container.cpp  container.h  container_pool.cpp  container_pool.h  container_test.cpp  event.cpp  event.h  executor.cpp  executor.h  executor_pool.cpp  executor_pool.h  main.cpp  message_manager.cpp  message_manager.h  process.cpp  process.h  process_pool.cpp  process_pool.h  resource_manager.cpp  resource_manager.h  system.cpp  system.h  system_test.cpp  tags  work_thread.cpp
src/collector/: CMakeLists.txt  cellet_mock.cpp  collector.cpp  collector.h  collector_service.cpp  collector_service.h  executor_in_machine.cpp  executor_in_machine.h  filter.h  framework.cpp  framework.h  framework_in_machine.cpp  framework_in_machine.h  framework_pool.cpp  framework_pool.h  machine.cpp  machine.h  machine_pool.cpp  machine_pool.h  main.cpp  monitor.cpp  monitor.h  rank_machine.h  tags  trigger.cpp  trigger.h  trigger_queue.cpp  trigger_queue.h
src/common/: CMakeLists.txt  a.out  block_queue.cpp  block_queue.h  block_queue_test.cpp  cond.cpp  cond.h  filesystem.h  fork_test.cpp  get_ip.h  get_ip_test.cpp  hdfs_filesystem.cpp  hdfs_filesystem.h  hdfs_filesystem_test.cpp  hdfs_test.cpp  message_queue.cpp  message_queue.h  message_queue_test.cpp  mutex.h  mutex_test.cpp  policy.cpp  policy.h  pool.h  pool_test.cpp  register.cpp  register.h  register_test.cpp  rpc.h  rwlock.h  rwlock_test.cpp  singleton.h  singleton_test.cpp  string_utility.h  string_utility_test.cpp  tags  test.cpp  thread.cpp  thread.h  xml_handler.cpp  xml_handler.h  (+1 more)
src/include/: CMakeLists.txt  attributes.h  get_ip.h  get_ip_test.cpp  proxy.h  type.h
src/proxy/: collector_wrapper.cpp  collector_wrapper.h  scheduler_wrapper.cpp  scheduler_wrapper.h
src/proxy/cellet/: cellet.thrift
src/proxy/cellet/gen-cpp/: Cellet.cpp  Cellet.h  Cellet_server.skeleton.cpp  Scheduler.h  Scheduler_server.skeleton.cpp  cellet_constants.cpp  cellet_constants.h  cellet_types.cpp  cellet_types.h  scheduler_constants.cpp  scheduler_types.cpp  scheduler_types.h
src/proxy/collector/: collector.thrift
src/proxy/collector/gen-cpp/: Collector.cpp  Collector.h  Collector_server.skeleton.cpp  collector_constants.cpp  collector_constants.h  collector_types.cpp  collector_types.h
src/proxy/scheduler/: scheduler.thrift
src/proxy/scheduler/gen-cpp/: Scheduler.cpp  Scheduler.h  Scheduler_server.skeleton.cpp  scheduler_constants.h  scheduler_types.cpp  scheduler_types.h
src/proxy/scheduler/gen-java/: Scheduler.java  TaskInfo.java
src/scheduler/: CMakeLists.txt  autoscale_framework.cpp  autoscale_framework.h  autoscale_pool.cpp  autoscale_pool.h  components_manager.cpp  components_manager.h  define.h  dispatcher.cpp  dispatcher.h  event.cpp  event.h  framework.cpp  framework.h  framework_interface.h  framework_pool.cpp  framework_pool.h  framework_pool_interface.h  handler.cpp  handler.h  identity.h  item.h  main.cpp  matcher.h  scheduler.cpp  scheduler.h  scheduler_service.cpp  scheduler_service.h  standard_framework.h  standard_pool.cpp  standard_pool.h  starter.h  state.cpp  state.h  tags  task.cpp  task.h  task_pool.cpp  task_pool.h  task_queue.cpp  (+2 more)
src/test/: CMakeLists.txt
src/test/container-test/: CMakeLists.txt  test.cpp
src/test/ipc-test/: sender  sender.cpp
src/test/thrift-test/: .make  CMakeLists.txt  client  client.cpp  client.py  echo.thrift  server.cpp  tags
src/test/thrift-test/gen-cpp/: Echo.cpp  Echo_server.skeleton.cpp  echo_types.cpp  echo_types.h
src/test/thrift-test/gen-java/: Echo.java  Test.java
src/test/thrift-test/gen-py/echo/: Echo.py
src/test/xml-test/: CMakeLists.txt  read_xml.cpp  test.xml
src/tools/: .cello_submit.cpp.swp  CMakeLists.txt  add_context.cpp  add_context.h  cello_add.cpp  cello_submit.cpp  configuration.cpp  configuration.h  context.h  filesystem.h  framework.xml  framework_configuration.cpp  framework_configuration.h  hdfs_filesystem.cpp  hdfs_filesystem.h  hdfs_filesystem_test.cpp  hdfs_test  policy.xml  submit_context.cpp  submit_context.h  tags  task.xml  task_configuration.cpp  task_configuration.h
test/: CMakeLists.txt
test/ipc-test/: info.h  receiver  receiver.cpp
test/thrift-test/: CMakeLists.txt  client.cpp  server  server.cpp
test/thrift-test/gen-cpp/: Echo.h
test/thrift-test/gen-java/: Info.java
test/thrift-test/gen-py/echo/: Echo-remote  __init__.py
test/xml-test/: CMakeLists.txt  read_xml.cpp
