CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMakeModules/")

PROJECT(CELLO)

SET(CMAKE_CXX_FLAGS "-g -Wall -Wno-deprecated")

# 3rd party
FIND_PACKAGE(Boost 1.46.1 REQUIRED)
FIND_PACKAGE(GTest REQUIRED)
#FIND_PACKAGE(Glog REQUIRED)
#FIND_PACKAGE(Gflags REQUIRED)
#FIND_PACKAGE(Classad REQUIRED)
#FIND_PACKAGE(Lxc REQUIRED)
FIND_PACKAGE(JNI REQUIRED)
FIND_PACKAGE(Thrift REQUIRED)

ADD_SUBDIRECTORY(src)

INSTALL(DIRECTORY log DESTINATION .)
