CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMakeModules/")

PROJECT(CELLO)

SET(CMAKE_CXX_FLAGS "-g -Wall -Wno-deprecated")

# 3rd party
FIND_PACKAGE(Boost 1.46.1 REQUIRED)
FIND_PACKAGE(GTest REQUIRED)
#FIND_PACKAGE(Glog REQUIRED)
#FIND_PACKAGE(Gflags REQUIRED)
#FIND_PACKAGE(Classad REQUIRED)
#FIND_PACKAGE(Lxc REQUIRED)
FIND_PACKAGE(JNI REQUIRED)
FIND_PACKAGE(Thrift REQUIRED)

# get jvm library directory
STRING(REGEX REPLACE "([^\n]+/)[^\n/]+$" "\\1" JVM_LIBRARAY_DIR "${JAVA_JVM_LIBRARY}")

SET(LIBRARY ${JVM_LIBRARAY_DIR})

# the RPATH to be add when installing, ifonly it's not system directory
FOREACH(LIB ${LIBRARY})
    LIST(FIND CMAKE_PLATFORM_IMPLICIT_LINK_DIRECTORIES
        "${LIB}" isSystemDir)
    IF("${isSystemDir}" STREQUAL "-1")
        LIST(APPEND CMAKE_INSTALL_RPATH ${LIB})
    ENDIF("${isSystemDir}" STREQUAL "-1")
ENDFOREACH(LIB ${LIBRARY})

MESSAGE(STATUS "Add Shared Library:")
FOREACH(msg ${CMAKE_INSTALL_RPATH})
    MESSAGE(STATUS ${msg})
ENDFOREACH(msg ${CMAKE_INSTALL_RPATH})

ADD_SUBDIRECTORY(src)

INSTALL(DIRECTORY log DESTINATION .)
